--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "elm": "^0.19.0-no-deps",
-    "elm-format": "^0.8.1"
+    "elm-format": "^0.8.1",
+    "uglify-js": "^3.6.0"
   }
 }
