--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "format": "elm-format --yes src/Siren.elm",
     "reactor": "elm reactor",
-    "build": "elm make --optimize --output docs/siren.js src/Siren.elm | uglifyjs docs/siren.js --compress \"pure_funcs=[F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9],pure_getters,keep_fargs=false,unsafe_comps,unsafe\" | uglifyjs --mangle --output=docs/siren.js"
+    "build": "rm -rf .elm elm-stuff && elm make --optimize --output docs/siren.js src/Siren.elm && uglifyjs docs/siren.js --compress \"pure_funcs=[F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9],pure_getters,keep_fargs=false,unsafe_comps,unsafe\" | uglifyjs --mangle --output=docs/siren.js"
   },
   "devDependencies": {
     "elm": "^0.19.0-no-deps",
