--- a/package.json
+++ b/package.json
@@ -2,12 +2,22 @@
   "private": true,
   "scripts": {
     "format": "elm-format --yes src/Siren.elm",
-    "reactor": "elm reactor",
-    "build": "rm -rf .elm elm-stuff && elm make --optimize --output docs/siren.js src/Siren.elm && uglifyjs docs/siren.js --compress \"pure_funcs=[F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9],pure_getters,keep_fargs=false,unsafe_comps,unsafe\" | uglifyjs --mangle --output=docs/siren.js"
+    "watch": "rollup --config rollup.config.js --environment NODE_ENV:development --watch",
+    "development": "rollup --config rollup.config.js --environment NODE_ENV:development",
+    "production": "rollup --config rollup.config.js --environment NODE_ENV:production"
   },
   "devDependencies": {
-    "elm": "^0.19.0-no-deps",
-    "elm-format": "^0.8.1",
-    "uglify-js": "^3.6.0"
+    "autoprefixer": "10.2.5",
+    "cssnano": "4.1.11",
+    "elm": "0.19.1-5",
+    "elm-format": "0.8.5",
+    "rollup": "2.45.2",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-elm": "3.0.0",
+    "rollup-plugin-livereload": "2.0.0",
+    "rollup-plugin-postcss": "4.0.0",
+    "rollup-plugin-serve": "1.1.0",
+    "rollup-plugin-terser": "7.0.2"
   }
 }
